fixed profile photo alignment

--- a/css/style.css
+++ b/css/style.css
@@ -1593,7 +1593,7 @@ img {
       width: 200px;
       border-radius: 50%;
       border: 2px solid #1B3068;
-      margin-top: 10.0em;
+      margin-top: 2.0em;
     }
   .email-mobile-view {
     width: 75%;
@@ -1606,7 +1606,7 @@ img {
     width: 200px;
     border-radius: 50%;
     border: 2px solid #1B3068;
-    margin-top: 10.0em;
+    margin-top: 8.0em;
   }
   .email-mobile-view {
     width: 75%;
